# Audit-RAG

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: app.yaml  ingestion.yaml  retrieval.yaml  tags.yaml
data/eval/: retrieval_queries.jsonl
data/provisional/: README.md
data/raw/: 2023-06-angle-report.html  2023-06-angle-report.md  2023-07-reserve-protocol-invitational.html  2023-07-reserve-protocol-invitational.md  2023-07-reserve-report.html  2023-07-reserve-report.md  2023-08-reserve-protocol-mitigation-review.html  2023-08-reserve-protocol-mitigation-review.md  2023-09-reserve-protocol-mitigation-review.html  2023-09-reserve-protocol-mitigation-review.md  2023-10-ethena-report.html  2023-10-ethena-report.md  2024-02-althea-liquid-infrastructure-report.html  2024-02-althea-liquid-infrastructure-report.md  2024-02-spectra-report.html  2024-02-spectra-report.md  2024-04-dyad-report.md  2024-04-noya-report.html  2024-04-noya-report.md  2025-03-nudgexyz-report.md  (+6 more)
docs/: audit-workbench-direction.md  continue-here.md  data-curation-quality-gate.md  data-schema.md  glossary-zh.md  local-setup.md  prd.md  retrieval-design.md  skill-aware-architecture.md  smart-contract-audit-glossary-zh.md  tag-taxonomy.md  triage-interface.md  week-1-plan.md
schemas/: case_report.schema.json  component_checklist.schema.json  contest_note.schema.json  false_positive_case.schema.json  low_non_critical_case.schema.json  validation_recipe.schema.json  vulnerability_pattern.schema.json
scripts/: sync_skill_docs.py
tests/: test_data_quality.py  test_data_quality_cli.py
(+311 files in other folders)
