[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audit-rag"
version = "0.1.0"
description = "Competition-oriented smart contract audit RAG workbench"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "qwe"}
]
dependencies = [
  "pydantic>=2.7,<3",
  "pyyaml>=6.0",
  "jsonschema>=4.22",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
audit-rag = "audit_rag.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
